--- a/polybar/config
+++ b/polybar/config
@@ -26,48 +26,107 @@ include-file = ~/.config/polybar/modules.ini
 
 [variables]
 mpadding = 1
-margin = 3 
+margin = 3
 
 [bar/example]
 background = ${colors.xbg}
 foreground = ${colors.xfg}
 
 width = 100%
-height = 17
+height = 20
 ;offset-y = 10
 ;offset-x = 20
 
 dim-value = 1.0
 
-border-top-size = 3
-border-bottom-size = 5 
-border-right-size = 0
-border-left-size = 0
+;border-top-size = 3
+;border-bottom-size = 5 
+;border-right-size = 0
+;border-left-size = 0
+border-size = 1
+;radius = 6.0
 
 #bottom = true
 #override-redirect = true
 
 font-0 = "Iosevka Etoile:style=regular:size=10;3"
 font-1 = "Iosevka Nerd Font:style=regular:size=10;3"
+#font-2 = "Font Awesome 5 Brands:size=10;3"
 
 fixed-center = true
 spacing = 0
-padding-left = 0
-padding-right = 0
+padding-left = 1
+padding-right = 1
 module-margin-left = 0
 module-margin-right = 0 
 
 modules-left = left i3 bspwm
-modules-center = date
-modules-right = xkeyboard pulseaudio-control mic bluetooth wlan memory cpu battery dunst right
-overline-size = 6
+modules-center = date dunst
+modules-right = xkeyboard pulseaudio-control mic bluetooth wlan battery right
+;overline-size = 6
+;overline-color=${colors.xbs}
+;underline-size = 3
+;underline-color=${colors.xbs}
+
+;tray-maxsize = 20
+;tray-padding = 4
+;tray-position = right 
+#tray-background = ${colors.xbg2}
+
+enable-ipc = false
+border-color =${colors.xbg}
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+
+
+[bar/bottom]
+background = ${colors.xbg}
+foreground = ${colors.xfg}
+
+width = 80%
+height = 25
+offset-y = 0.35%
+offset-x = 10%
+
+dim-value = 1.0
+
+;border-top-size = 3
+;border-bottom-size = 3
+;border-right-size = 3
+;border-left-size = 3
+;border-size = 2
+;border-color = ${colors.xfg}
+radius = 6.0
+
+bottom = true
+override-redirect = true
+
+font-0 = "Iosevka Etoile:style=regular:size=10;3"
+font-1 = "Iosevka Nerd Font:style=regular:size=10;3"
+#font-2 = "Font Awesome 5 Brands:size=10;3"
+
+fixed-center = true
+spacing = 0
+padding-left = 5
+padding-right = 5
+module-margin-left = 0
+module-margin-right = 0 
+
+modules-left = system spotify-prev spotify-play-pause spotify-next spotify
+modules-center = 
+modules-right =  memory cpu
+underline-size = 6
 overline-color=${colors.xbs}
-underline-size = 3
-underline-color=${colors.xbs}
+;underline-size = 3
+;underline-color=${colors.xbs}
 
 tray-maxsize = 20
-tray-padding = 3
-tray-position = right
+tray-padding = 4
+tray-position = center
 #tray-background = ${colors.xbg2}
 
 enable-ipc = true
@@ -78,7 +137,6 @@ cursor-scroll = ns-resize
 
 label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
-
 
 [settings]
 ;https://github.com/jaagr/polybar/wiki/Configuration#application-settings
@@ -99,6 +157,8 @@ format-spacing =
 format-padding =
 format-margin =
 format-offset =
+
+
 
 
 [global/wm]
