--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -24,9 +24,9 @@ type = custom/script
 tail = true
 label-padding = 1
 label-foreground = ${colors.foreground-alt}
-label-background = ${colors.grey}
+;label-background = ${colors.grey}
 # Icons mixed from Font Awesome 5 and Material Icons
-exec = ~/.config/polybar/scripts/pulseaudio-control.bash --volume-max 130 --icons-volume " , " --icon-muted " " --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" --sink-nicknames-from "device.description" --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:  Speakers" --sink-nickname "alsa_output.usb-Kingston_HyperX_Virtual_Surround_Sound_00000000-00.analog-stereo:  Headphones" listen
+exec = ~/.config/polybar/scripts/pulseaudio-control.bash --volume-max 130 --icons-volume " , " --icon-muted " " --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" --sink-nicknames-from "device.description" --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo:蓼 Speakers" --sink-nickname "alsa_output.usb-Kingston_HyperX_Virtual_Surround_Sound_00000000-00.analog-stereo:  Headphones" listen
 click-right = exec pavucontrol &
 click-left = ~/.config/polybar/scripts/pulseaudio-control.bash togmute
 click-middle = ~/.config/polybar/scripts/pulseaudio-control.bash next-sink
@@ -43,7 +43,7 @@ date-alt = %a %Y-%m-%d
 date = %a %d
 time-alt = %k:%M:%S
 time = %k:%M
-label = "  %date% %time% "
+label = "%{F#88e1f2}%{F#ffffff}  %date% %time% "
 
 
 [module/netspeed]
@@ -56,16 +56,21 @@ format-connected-background=${colors.xbg2}
 label-connected = "  %upspeed%   %downspeed%"
 
 
-[module/wlan]
-type = internal/network
-interface = wlp2s0
-interval = 1.0
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-format-connected-padding = ${variables.mpadding}
-format-connected-background=${colors.xbg2}
-label-connected =   %essid%
+; [module/wlan]
+; type = internal/network
+; interface = wlp2s0
+; interval = 1.0
+; format-connected = <label-connected>
+; format-disconnected = <label-disconnected>
+; format-connected-padding = ${variables.mpadding}
+; format-connected-background=${colors.xbg2}
+; label-connected =   %essid%
 
+[module/wlan]
+type = custom/script
+exec = $HOME/.config/dotfiles/polybar/scripts/wifi.sh
+interval = 5.0
+format = <label>
 
 [module/battery]
 type = internal/battery
@@ -78,7 +83,7 @@ format-charging-background=${colors.xbg2}
 format-discharging-padding = ${variables.mpadding}
 format-discharging-background=${colors.xbg2}
 format-discharging = <ramp-capacity>  <label-discharging>
-format-full-prefix = 
+format-full-prefix = "  "
 format-full-background=${colors.xbg2}
 label-charging =   %percentage%%
 ramp-capacity-0 = 
@@ -91,17 +96,25 @@ ramp-capacity-4 = 
 [module/xkeyboard]
 type = internal/xkeyboard
 label-layout-padding = 2
-label-layout =   %layout%
+label-layout = "  %layout%"
 
 
 [module/dunst]
 type = custom/script
-exec = dunstctl is-paused|grep -q true && echo   || echo 
+exec = $HOME/.config/dotfiles/dunst/alert.sh 3
 format = <label>
 interval = 1
-click-left = dunstctl set-paused toggle
+click-left = $HOME/.config/dotfiles/dunst/alert.sh 2
+click-right = $HOME/.config/dotfiles/dunst/alert.sh 1
 format-padding = 1
 
+# [module/dunst]
+# type = custom/script
+# exec = dunstctl is-paused|grep -q true && echo   || echo 
+# format = <label>
+# interval = 1
+# click-left = dunstctl set-paused toggle
+# format-padding = 1
 
 [module/cpu]
 format-padding = ${variables.mpadding}
@@ -117,8 +130,8 @@ bar-load-foreground-0 = #DDDDDD
 bar-load-foreground-1 = #DDDDDD
 bar-load-foreground-2 = #f5a70a
 bar-load-foreground-3 = #ff5555
-bar-load-fill = ▐
-bar-load-empty = ▐
+bar-load-fill = "  "
+bar-load-empty = "  "
 bar-load-empty-foreground = #444444
 
 
@@ -135,73 +148,53 @@ bar-used-foreground-0 = #DDDDDD
 bar-used-foreground-1 = #DDDDDD
 bar-used-foreground-2 = #f5a70a
 bar-used-foreground-3 = #ff5555
-bar-used-fill = ▐
-bar-used-empty = ▐
+bar-used-fill = "  "
+bar-used-empty = "  "
 bar-used-empty-foreground = #444444
 format-prefix = " Mem: "
 
 
 [module/i3]
 type = internal/i3
-format = <label-state> <label-mode>
+;format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-;label-focused-underline= ${colors.primary}
-label-focused-padding = 2
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+strip-wsnumbers = true
+
+ws-icon-0 = 1;%{T4}%{F#e36387}%{T-}
+ws-icon-1 = 2;%{T4}%{F#fabea7}%{T-}
+ws-icon-2 = 3;%{T4}%{F#90D4AE}%{T-}
+ws-icon-3 = 4;%{T4}%{F#88e1f2}%{T-}
+ws-icon-4 = 5;%{T4}%{F#A786F7}%{T-}
+ws-icon-5 = 6;%{T4}%{F#fabea7}%{T-}
+ws-icon-6 = 7;%{T4}%{F#fabea7}%{T-}
+ws-icon-7 = 8;%{T4}%{F#fabea7}%{T-}
+ws-icon-8 = 9;%{T4}%{F#e36387}%{T-}
+ws-icon-9 = 10;%{T4}%{F#e36387}%{T-}
+fuzzy-match = true
+
+label-unfocused = %icon%
 label-unfocused-padding = 2
+label-mode-background = ${colors.primary}
+label-mode-padding = 2
+;label-focused-underline= ${colors.primary}
+;label-mode-foreground = #000
+; focused = Active workspace on focused monitor
+;label-focused = %icon%
+label-focused = %icon% %name%
+label-focused-background = ${colors.background-alt}
+label-focused-padding = 2
+;label-focused-foreground = ${colors.background-alt}
+; unfocused = Inactive workspace on any monitor
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
+;label-visible = %icon%
+;label-visible-background = ${self.label-focused-background}
 ;label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
+;label-visible-padding = ${self.label-focused-padding}
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
-
-[module/bspwm]
-type = internal/bspwm
-
-pin-workspaces = true
-inline-mode = true
-enable-click = true
-enable-scroll = true
-reverse-scroll = false
-
-format = <label-state>
-
-ws-icon-0 = I;%{F#c2f0fc}    
-ws-icon-1 = II;%{F#fabea7}
-ws-icon-2 = III;%{F#88e1f2}   
-ws-icon-3 = IV;%{F#e36387}      
-ws-icon-4 = V;%{F#cceabb}  
-ws-icon-5 = VI; 
-
-label-focused = %icon%
-label-focused-underline = ${colors.foreground}
-
-label-focused-padding = 1
-
-
-label-occupied = %icon%
-label-occupied-foreground =#ffffff
-label-occupied-padding = 1
-
-label-empty = %icon%
-label-empty-foreground =#ffffff
-label-empty-padding = 1
-label-urgent = %icon%
-xxlabel-urgent-foreground = #88C0D0
-label-urgent-padding = 1
-
 
 
 [module/bluetooth]
@@ -222,3 +215,38 @@ interval = 1
 label-padding = 1
 ;label-foreground = ${colors.foreground-alt}
 ;label-background = ${colors.grey}
+
+[module/spotify]
+type = custom/script
+exec = ~/.config/polybar/scripts/get_spotify_status.sh
+tail = false
+format-prefix = "  "
+format = <label>
+format-underline = ${colors.background}
+
+[module/spotify-prev]
+type = custom/script
+exec = echo "玲  "
+format = %{F#90D4AE}<label>
+click-left = playerctl previous spotify
+
+
+[module/spotify-play-pause]
+type = custom/ipc
+hook-0 = echo "%{F#90D4AE}  "
+hook-1 = echo "%{F#90D4AE}契  "
+initial = 1
+click-left = playerctl play-pause spotify
+
+
+[module/spotify-next]
+type = custom/script
+exec = echo "怜  "
+format = %{F#90D4AE}<label>
+click-left = playerctl next spotify
+
+[module/system]
+type = custom/script
+exec = echo "    "
+format = %{F#e36387}<label>
+click-left = polybar-msg cmd toggle && ~/.config/i3/scripts/dmenu/dmenu_system.sh && polybar-msg cmd toggle
